welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (vacation == true && day=0) {
                             ^alarmClock:3: error: not found: value off
		return off
                       ^alarmClock:4: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	} else if (vacation == true && day=6) {
                                    ^alarmClock:5: error: not found: value off
		return off
                       ^